fixup! hide dates in article list on small screens

--- a/css/default.scss
+++ b/css/default.scss
@@ -221,6 +221,10 @@ hr {
         width: 100%;
         margin: 0 5px;
 
+        ul.posts {
+            list-style-type: circle;
+        }
+
         ul.posts span {
             display: none
         }
